// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLayout renders condensed layout 1`] = `
.c1 {
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c4 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c5 {
  width: 100%;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
}

.c9 {
  width: 100%;
}

.c0 {
  padding: 16px;
}

.c2 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  width: 100%;
  margin-bottom: 16px;
}

.c3 {
  margin-left: -16px;
  margin-right: -16px;
  display: none;
  margin-top: 16px;
}

.c6 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-left: 0;
  margin-right: 0;
  margin-top: 16px;
}

.c7 {
  margin-left: -16px;
  margin-right: -16px;
  display: none;
  margin-bottom: 16px;
}

.c8 {
  height: 100%;
  display: none;
  margin-right: 16px;
}

.c10 {
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
  width: 100%;
  margin-top: 16px;
}

@media screen and (min-width:768px) {
  .c9 {
    width: 256px;
  }
}

@media screen and (min-width:1012px) {
  .c9 {
    width: 296px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    margin-left: 0 !important;
    margin-right: 0 !important;
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    width: auto;
    margin-left: 16px;
    margin-top: 0 !important;
    margin-bottom: 0 !important;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-order: 3;
    -ms-flex-order: 3;
    order: 3;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    margin-left: 0 !important;
    margin-right: 0 !important;
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    display: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <header
        class="c2"
      >
        Header
        <div
          class="c3"
        />
      </header>
      <main
        class="c4"
      >
        <div
          class="c5"
        >
          Content
        </div>
      </main>
      <aside
        class="c6"
      >
        <div
          class="c7"
        />
        <div
          class="c8"
        />
        <div
          class="c9"
        >
          Pane
        </div>
      </aside>
      <footer
        class="c10"
      >
        <div
          class="c7"
        />
        Footer
      </footer>
    </div>
  </div>
</div>
`;

exports[`PageLayout renders default layout 1`] = `
.c0 {
  padding: 16px;
}

.c1 {
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  width: 100%;
  margin-bottom: 16px;
}

.c3 {
  margin-left: -16px;
  margin-right: -16px;
  display: none;
  margin-top: 16px;
}

.c4 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c5 {
  width: 100%;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
}

.c6 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  margin-left: 0;
  margin-right: 0;
  margin-top: 16px;
}

.c7 {
  margin-left: -16px;
  margin-right: -16px;
  display: none;
  margin-bottom: 16px;
}

.c8 {
  height: 100%;
  display: none;
  margin-right: 16px;
}

.c9 {
  width: 100%;
}

.c10 {
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
  width: 100%;
  margin-top: 16px;
}

@media screen and (min-width:1012px) {
  .c0 {
    padding: 24px;
  }
}

@media screen and (min-width:1012px) {
  .c2 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    margin-left: 0 !important;
    margin-right: 0 !important;
    display: none;
  }
}

@media screen and (min-width:1012px) {
  .c3 {
    margin-left: -24px;
    margin-right: -24px;
    margin-top: 24px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    width: auto;
    margin-left: 16px;
    margin-top: 0 !important;
    margin-bottom: 0 !important;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-order: 3;
    -ms-flex-order: 3;
    order: 3;
  }
}

@media screen and (min-width:1012px) {
  .c6 {
    margin-top: 24px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    margin-left: 0 !important;
    margin-right: 0 !important;
    display: none;
  }
}

@media screen and (min-width:1012px) {
  .c7 {
    margin-left: -24px;
    margin-right: -24px;
    margin-bottom: 24px;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    display: none;
  }
}

@media screen and (min-width:1012px) {
  .c8 {
    margin-right: 24px;
  }
}

@media screen and (min-width:768px) {
  .c9 {
    width: 256px;
  }
}

@media screen and (min-width:1012px) {
  .c9 {
    width: 296px;
  }
}

@media screen and (min-width:1012px) {
  .c10 {
    margin-top: 24px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <header
        class="c2"
      >
        Header
        <div
          class="c3"
        />
      </header>
      <main
        class="c4"
      >
        <div
          class="c5"
        >
          Content
        </div>
      </main>
      <aside
        class="c6"
      >
        <div
          class="c7"
        />
        <div
          class="c8"
        />
        <div
          class="c9"
        >
          Pane
        </div>
      </aside>
      <footer
        class="c10"
      >
        <div
          class="c7"
        />
        Footer
      </footer>
    </div>
  </div>
</div>
`;

exports[`PageLayout renders pane in different position when narrow 1`] = `
.c0 {
  padding: 16px;
}

.c1 {
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  width: 100%;
  margin-bottom: 16px;
}

.c3 {
  margin-left: -16px;
  margin-right: -16px;
  display: none;
  margin-top: 16px;
}

.c4 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c5 {
  width: 100%;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
}

.c10 {
  margin-left: -16px;
  margin-right: -16px;
  display: none;
  margin-bottom: 16px;
}

.c7 {
  height: 100%;
  display: none;
  margin-right: 16px;
}

.c8 {
  width: 100%;
}

.c9 {
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
  width: 100%;
  margin-top: 16px;
}

.c6 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  width: 100%;
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 16px;
}

@media screen and (min-width:1012px) {
  .c0 {
    padding: 24px;
  }
}

@media screen and (min-width:1012px) {
  .c2 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    margin-left: 0 !important;
    margin-right: 0 !important;
    display: none;
  }
}

@media screen and (min-width:1012px) {
  .c3 {
    margin-left: -24px;
    margin-right: -24px;
    margin-top: 24px;
  }
}

@media screen and (min-width:768px) {
  .c10 {
    margin-left: 0 !important;
    margin-right: 0 !important;
    display: none;
  }
}

@media screen and (min-width:1012px) {
  .c10 {
    margin-left: -24px;
    margin-right: -24px;
    margin-bottom: 24px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    display: none;
  }
}

@media screen and (min-width:1012px) {
  .c7 {
    margin-right: 24px;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    width: 256px;
  }
}

@media screen and (min-width:1012px) {
  .c8 {
    width: 296px;
  }
}

@media screen and (min-width:1012px) {
  .c9 {
    margin-top: 24px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    width: auto;
    margin-left: 16px;
    margin-top: 0 !important;
    margin-bottom: 0 !important;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-order: 3;
    -ms-flex-order: 3;
    order: 3;
  }
}

@media screen and (min-width:1012px) {
  .c6 {
    margin-bottom: 24px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <header
        class="c2"
      >
        Header
        <div
          class="c3"
        />
      </header>
      <main
        class="c4"
      >
        <div
          class="c5"
        >
          Content
        </div>
      </main>
      <aside
        class="c6"
      >
        <div
          class="c3"
        />
        <div
          class="c7"
        />
        <div
          class="c8"
        >
          Pane
        </div>
      </aside>
      <footer
        class="c9"
      >
        <div
          class="c10"
        />
        Footer
      </footer>
    </div>
  </div>
</div>
`;

exports[`PageLayout renders with dividers 1`] = `
.c0 {
  padding: 16px;
}

.c1 {
  max-width: 1280px;
  margin-left: auto;
  margin-right: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c2 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  width: 100%;
  margin-bottom: 16px;
}

.c4 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c5 {
  width: 100%;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
}

.c9 {
  width: 100%;
}

.c10 {
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
  width: 100%;
  margin-top: 16px;
}

.c3 {
  margin-left: -16px;
  margin-right: -16px;
  display: block;
  height: 8px;
  background-color: #f6f8fa;
  box-shadow: inset 0 -1px 0 0 #d0d7de,inset 0 1px 0 0 #d0d7de;
  margin-top: 16px;
}

.c6 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  width: 100%;
  margin-left: 0;
  margin-right: 0;
  margin-bottom: 16px;
}

.c7 {
  margin-left: -16px;
  margin-right: -16px;
  display: block;
  height: 8px;
  background-color: #f6f8fa;
  box-shadow: inset 0 -1px 0 0 #d0d7de,inset 0 1px 0 0 #d0d7de;
  margin-top: 16px;
}

.c8 {
  height: 100%;
  display: none;
  margin-left: 16px;
}

.c11 {
  margin-left: -16px;
  margin-right: -16px;
  display: block;
  height: 1px;
  background-color: #d0d7de;
  margin-bottom: 16px;
}

@media screen and (min-width:1012px) {
  .c0 {
    padding: 24px;
  }
}

@media screen and (min-width:1012px) {
  .c2 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width:768px) {
  .c9 {
    width: 256px;
  }
}

@media screen and (min-width:1012px) {
  .c9 {
    width: 296px;
  }
}

@media screen and (min-width:1012px) {
  .c10 {
    margin-top: 24px;
  }
}

@media screen and (min-width:768px) {
  .c3 {
    margin-left: 0 !important;
    margin-right: 0 !important;
    display: block;
    height: 1px;
    background-color: #d0d7de;
  }
}

@media screen and (min-width:1012px) {
  .c3 {
    margin-left: -24px;
    margin-right: -24px;
    margin-top: 24px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    width: auto;
    margin-right: 16px;
    margin-top: 0 !important;
    margin-bottom: 0 !important;
    -webkit-flex-direction: row-reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
  }
}

@media screen and (min-width:1012px) {
  .c6 {
    margin-bottom: 24px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    margin-left: 0 !important;
    margin-right: 0 !important;
    display: none;
  }
}

@media screen and (min-width:1012px) {
  .c7 {
    margin-left: -24px;
    margin-right: -24px;
    margin-top: 24px;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    display: block;
    width: 1px;
    background-color: #d0d7de;
  }
}

@media screen and (min-width:1012px) {
  .c8 {
    margin-left: 24px;
  }
}

@media screen and (min-width:768px) {
  .c11 {
    margin-left: 0 !important;
    margin-right: 0 !important;
    display: none;
  }
}

@media screen and (min-width:1012px) {
  .c11 {
    margin-left: -24px;
    margin-right: -24px;
    margin-bottom: 24px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <header
        class="c2"
      >
        Header
        <div
          class="c3"
        />
      </header>
      <main
        class="c4"
      >
        <div
          class="c5"
        >
          Content
        </div>
      </main>
      <aside
        class="c6"
      >
        <div
          class="c7"
        />
        <div
          class="c8"
        />
        <div
          class="c9"
        >
          Pane
        </div>
      </aside>
      <footer
        class="c10"
      >
        <div
          class="c11"
        />
        Footer
      </footer>
    </div>
  </div>
</div>
`;
